--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ h2 {
 
 #score{
     margin: 50px 0px;
+    color: rgb(44, 60, 100)
 }
 
 #main-cont{
@@ -21,9 +22,17 @@ h2 {
 
 .game{
     font-size: 15px;
+    color: rgb(44, 60, 100);
     margin: 50px 15px;
     border-radius: 10px;
-    border: 1px solid gray;
+    border: 1px solid rgb(44, 60, 100);
     padding: 5px;
-    background-color: whitesmoke;
+    background-color: rgb(227, 230, 229);
+    transition: color 0.5s;
+}
+
+.game:hover {
+    color: rgb(227, 230, 229);
+    background-color: rgb(44, 60, 100);
+    border: 1px solid rgb(227, 230, 229);
 }
